@@ -79,7 +79,7 @@ our @EXPORT_OK =
       gcd lcm factor factor_exp divisors valuation hammingweight
       todigits fromdigits todigitstring sumdigits
       tozeckendorf fromzeckendorf
-      invmod sqrtmod rootmod addmod submod mulmod divmod powmod qnr
+      invmod sqrtmod allsqrtmod rootmod addmod submod mulmod divmod powmod qnr
       vecsum vecmin vecmax vecprod vecreduce vecextract vecequal
       vecany vecall vecnotall vecnone vecfirst vecfirstidx
       moebius mertens liouville sumliouville prime_omega prime_bigomega
@@ -1109,6 +1109,63 @@ sub harmreal {
 
   require Math::Prime::Util::PP;
   Math::Prime::Util::PP::harmreal($n, $precision);
+}
+
+# helper function for allsqrtmod() - return list of all square roots of
+# a (mod p^k), assuming a integer, p prime, k positive integer.
+sub _allsqrtmodpk {
+  my($a,$p,$k) = @_;
+  my $pk = $p ** $k;
+  unless ($a % $p) {
+    unless ($a % ($pk)) {
+      # if p^k divides a, we need the square roots of zero, satisfied by
+      # ip^j with 0 <= i < p^{floor(k/2)}, j = p^{ceil(k/2)}
+      my $low = $p ** ($k >> 1);
+      my $high = ($k & 1) ? $low * $p : $low;
+      return map $high * $_, 0 .. $low - 1;
+    }
+    # p divides a, p^2 does not
+    my $a2 = $a / $p;
+    return () if $a2 % $p;
+    my $pj = $pk / $p;
+    return map {
+      my $q = $_;
+      map $q * $p + $_ * $pj, 0 .. $p - 1;
+    } _allsqrtmodpk($a2 / $p, $p, $k - 2);
+  }
+  my $q = sqrtmod($a, $pk);
+  return () unless defined $q;
+  return ($q, $pk - $q) if $p != 2;
+  return ($q) if $k == 1;
+  return ($q, $pk - $q) if $k == 2;
+  my $pj = $p ** ($k - 1);
+  my $q2 = ($q * ($pj - 1)) % $pk;
+  return ($q, $pk - $q, $q2, $pk - $q2);
+}
+
+# helper function for allsqrtmod() - return list of all square roots of
+# a (mod p^k), assuming a integer, n positive integer > 1, f arrayref
+# of [ p, k ] pairs representing factorization of n. Destroys f.
+sub _allsqrtmodfact {
+  my($a,$n,$f) = @_;
+  my($p,$k) = @{ shift @$f };
+  my @q = _allsqrtmodpk($a, $p, $k);
+  return @q unless @$f;
+  my $pk = $p ** $k;
+  my $n2 = $n / $pk;
+  return map {
+    my $q2 = $_;
+    map chinese([ $q2, $n2 ], [ $_, $pk ]), @q;
+  } _allsqrtmodfact($a, $n2, $f);
+}
+
+sub allsqrtmod {
+  my($a,$n) = @_;
+  _validate_integer($a);
+  _validate_integer($n);
+  $n = -$n if $n < 0;
+  return $n ? (0) : () if $n <= 1;
+  return _allsqrtmodfact($a, $n, [ factor_exp($n) ]);
 }
 
 #############################################################################
@@ -4416,6 +4473,12 @@ If the modulus is prime, the function will always return C<r>, the smaller
 of the two square roots (the other being C<-r mod |n|>.  If the modulus is
 composite, one of possibly many square roots will be returned, and it will
 not necessarily be the smallest.
+
+=head2 allsqrtmod
+
+Given two integers C<a> and C<n>, return a list of the principal values
+of all square roots of C<a> mod C<|n|>. If no square root exists, an empty
+list is returned.
 
 =head2 rootmod
 
