@@ -280,6 +280,7 @@ Tags:
   powmod(a,b,n)                       a ^ b mod n
   invmod(a,n)                         inverse of a modulo n
   sqrtmod(a,n)                        modular square root
+  allsqrtmod(a,n)                     modular square roots
   rootmod(a,k,n)                      modular k-th root
   prime_bigomega(n)                   number of prime factors
   prime_omega(n)                      number of distinct prime factors
