@@ -37,7 +37,8 @@ add_stopwords(qw/-th
                  totient moebius mertens liouville kronecker znorder znprimroot znlog
                  sumliouville
                  gcd lcm gcdext chinese
-                 invmod sqrtmod rootmod addmod submod mulmod powmod divmod
+                 invmod sqrtmod allsqrtmod rootmod
+                 addmod submod mulmod powmod divmod
                  binomialmod factorialmod
                  bernfrac bernreal harmfrac harmreal stirling hclassno
                  vecsum vecprod vecmin vecmax vecreduce vecextract vecequal
